# describeImageOllama

./: .gitignore  README.md  describe.spec  makefile  pyproject.toml
describeimage/: describeimage.py
