[tool.poetry]
name = "describeimage"
version = "0.1.0"
description = ""
authors = ["Wildiney Di Masi <wildiney@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
ollama = "^0.3.1"
pyinstaller = "^6.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
